@@ -5,7 +5,7 @@
 	<title>The chemical-mime-data Project</title>
 	<meta name="generator" content="Bluefish 1.0.7"/>
 	<meta name="author" content="Daniel Leidert"/>
-	<meta name="date" content="2007-01-28T14:52:01+0100"/>
+	<meta name="date" content="2007-05-20T23:10:15+0200"/>
 	<meta name="keywords" content="chemical-mime-data, chemical MIME"/>
 	<meta name="description" content="Homepage of the chemical-mime-data project, that tries to bring support for chemical MIME types to Linux desktops."/>
 	<meta name="robots" content="index, follow"/>
@@ -24,6 +24,7 @@
 			<li><a title="Why this compilation/database has been written ..." href="#intro">Introduction to the background</a></li>
 			<li><a title="Which MIME types can be detected and which are known by the database ..." href="#database">Which <abbr title="Multipurpose Internet Mail Extensions">MIME</abbr> types are currently supported</a></li>
 			<li><a title="Download and installation instructions" href="#install">Download and Installation</a></li>
+			<li><a title="Participation, mailing lists, contact, ..." href="#mailing">Mailing lists and Contact</a></li>
 			<li><a title="How to assign a chemical application/resource with a MIME type ..." href="#assign">How to make use of the <abbr title="Multipurpose Internet Mail Extensions">MIME</abbr> type detection</a></li>
 			<li><a title="&#187;To-Do&#171; things, plans, requestment, ..." href="#todo">What to do next</a></li>
 		</ol>
@@ -95,6 +96,16 @@ the icon has to be installed into the <a href="http://standards.freedesktop.org/
 		<pre>./configure [options you like most here] &amp;&amp; make &amp;&amp; make install</pre>
 		<p>The last step probably needs root permissions. For a list of configure options, you should run:</p>
 		<pre>./configure --help</pre>
+
+		<h2 id="mailing">Mailing lists and contact</h2>
+		<p>There are currently two mailing lists:</p>
+		<dl>
+			<dt><a href="http://lists.sourceforge.net/mailman/listinfo/chemical-mime-commits">chemical-mime-commits</a></dt>
+				<dd>The <acronym title="Version Control System, currently CVS">VCS</acronym> commits mailing lists. The list is probably only useful for developers. <a href="http://sourceforge.net/mailarchive/forum.php?forum_name=chemical-mime-commits">[Archive]</a></dd>
+			<dt><a href="http://lists.sourceforge.net/mailman/listinfo/chemical-mime-devel">chemical-mime-devel</a></dt>
+				<dd>The list for developers and interested users wanting to discuss the development of the data package, but also the chemical <acronym title="Multipurpose Internet Mail Extensions">MIME</acronym> media type. <a href="http://sourceforge.net/mailarchive/forum.php?forum_name=chemical-mime-devel">[Archive]</a></dd>
+		</dl>
+		<p>This is the preferred way to contact us. If you need to contact one of the people involved in the project, check the <a href="http://chemical-mime.cvs.sourceforge.net/*checkout*/chemical-mime/chemical-mime-data/AUTHORS"><tt>AUTHORS</tt></a> file for addresses.</p>
 
 		<h2 id="assign">How to make use of the <abbr title="Multipurpose Internet Mail Extensions">MIME</abbr> type detection</h2>
 		<p>To associate the chemical <abbr title="Multipurpose Internet Mail Extensions">MIME</abbr> types with a special application, you need to follow one of the guides:</p>
